// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu is rendered correctly 1`] = `
<div
  className="fRrBax"
  open={false}
>
  <div
    className="jeQBvB"
    role="listbox"
  >
    <button
      className="kGvxAb"
      onClick={[Function]}
      open={false}
      type="button"
    >
      <span
        className="hGwyht"
      >
        Foo
      </span>
      <span
        className="hGZyXg"
      >
        <span
          className="jCuhpT"
          open={false}
        >
          ▼
        </span>
      </span>
    </button>
    <div
      className="cesng"
    />
  </div>
</div>
`;

exports[`Menu is rendered correctly when open 1`] = `
<div
  className="fRrBax"
  open={true}
>
  <div
    className="cdtEcl"
    onClick={[Function]}
  />
  <div
    className="jeQBvB"
    role="listbox"
  >
    <button
      className="kGvxAb"
      onClick={[Function]}
      open={true}
      type="button"
    >
      <span
        className="hGwyht"
      >
        Foo
      </span>
      <span
        className="hGZyXg"
      >
        <span
          className="dEwrDX"
          open={true}
        >
          ▼
        </span>
      </span>
    </button>
    <div
      className="cesng"
    >
      <div
        className="hbutZv"
        open={true}
      >
        <div
          aria-selected={true}
          className="htSYFR"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex="0"
        >
          Foo
        </div>
        <div
          aria-selected={false}
          className="fFWKaa"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="option"
          tabIndex="0"
        >
          Bar
        </div>
      </div>
    </div>
  </div>
</div>
`;
